# sol

./: .gitignore  AUTHORS  CMakeLists.txt  README.md  acore.json  contact.txt  s
apps/bash_shared/: includes.sh
apps/db_assembler/: README.md  db_assembler.sh
apps/db_assembler/includes/: functions.sh
apps/db_pendings/: import.sh
bash/: db_assembler.sh  import.sh  includes.sh
conf/: config.cmake.dist  config.sh.dist
data/sql/base/db_auth/: account.sql  account_access.sql  account_banned.sql  account_muted.sql  autobroadcast.sql  ip2nation.sql  ip2nationCountries.sql  ip_banned.sql  logs.sql  logs_ip_actions.sql  realmcharacters.sql  realmlist.sql  uptime.sql
data/sql/base/db_characters/: account_data.sql  account_instance_times.sql  account_tutorial.sql  addons.sql  arena_team.sql  arena_team_member.sql  auctionhouse.sql  banned_addons.sql  battleground_deserters.sql  bugreport.sql  calendar_events.sql  calendar_invites.sql  channels.sql  channels_bans.sql  channels_rights.sql  character_account_data.sql  character_achievement.sql  character_achievement_progress.sql  character_action.sql  character_arena_stats.sql  character_aura.sql  character_banned.sql  character_battleground_random.sql  character_brew_of_the_month.sql  character_declinedname.sql  character_entry_point.sql  character_equipmentsets.sql  character_gifts.sql  character_glyphs.sql  character_homebind.sql  character_instance.sql  character_inventory.sql  character_pet.sql  character_pet_declinedname.sql  character_queststatus.sql  character_queststatus_daily.sql  character_queststatus_monthly.sql  character_queststatus_rewarded.sql  character_queststatus_seasonal.sql  character_queststatus_weekly.sql  (+53 more)
data/sql/base/db_world/: access_requirement.sql  achievement_criteria_data.sql  achievement_dbc.sql  achievement_reward.sql  achievement_reward_locale.sql  acore_string.sql  acore_string_locale.sql  areatrigger.sql  areatrigger_involvedrelation.sql  areatrigger_scripts.sql  areatrigger_tavern.sql  areatrigger_teleport.sql  battleground_template.sql  battlemaster_entry.sql  command.sql  conditions.sql  creature_addon.sql  creature_classlevelstats.sql  creature_equip_template.sql  creature_formations.sql  creature_guid_chance.sql  creature_id_chance.sql  creature_model_info.sql  creature_onkill_reputation.sql  creature_questender.sql  creature_questitem.sql  creature_queststarter.sql  creature_summon_groups.sql  creature_template_addon.sql  (+129 more)
src/cmake/: genrev.cmake  revision.h.in.cmake  showoptions.cmake
src/cmake/macros/: AutoCollect.cmake  CheckPlatform.cmake  ConfigureBaseTargets.cmake  FindACE.cmake  FindFmt.cmake  FindJemalloc.cmake  FindMySQL.cmake  FindOpenSSL.cmake  FindPCHSupport.cmake
src/common/: AutoPtr.h  CMakeLists.txt  Common.cpp  Common.h  CompilerDefs.h  Containers.h  Define.h  GitRevision.cpp  GitRevision.h
src/common/Collision/: BoundingIntervalHierarchy.cpp  BoundingIntervalHierarchy.h  BoundingIntervalHierarchyWrapper.h  DynamicTree.cpp  DynamicTree.h  VMapDefinitions.h  VMapTools.h
src/common/Configuration/: Config.cpp  Config.h
src/common/Cryptography/: ARC4.cpp  ARC4.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  OpenSSLCrypto.cpp  OpenSSLCrypto.h  SHA1.cpp  SHA1.h  WardenKeyGeneration.h
src/common/DataStores/: DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h
src/common/Database/: AdhocStatement.cpp  AdhocStatement.h  DatabaseEnv.h  DatabaseWorker.cpp  DatabaseWorker.h  DatabaseWorkerPool.cpp  DatabaseWorkerPool.h  Field.cpp  Field.h  MySQLConnection.cpp  MySQLConnection.h  MySQLThreading.h  PreparedStatement.cpp  PreparedStatement.h  QueryHolder.cpp  QueryHolder.h  QueryResult.cpp  QueryResult.h  SQLOperation.h  Transaction.cpp  Transaction.h
src/common/Debugging/: Errors.cpp  Errors.h
src/common/Dynamic/: FactoryHolder.h  LinkedList.h  ObjectRegistry.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerFunctionsPtr.h  TypeContainerVisitor.h  TypeList.h
src/common/Logging/: Log.cpp  Log.h
src/common/Packets/: ByteBuffer.cpp  ByteBuffer.h  WorldPacket.h
src/common/Threading/: Callback.h  DelayExecutor.cpp  LockedQueue.h  Threading.cpp  Threading.h
src/common/Utilities/: AccSecUtil.cpp  AccSecUtil.h  ByteConverter.h  CircularBuffer.h  DataMap.h  EventProcessor.cpp  EventProcessor.h  MathUtil.h  SignalHandler.h  StringFormat.h  Timer.h  Util.cpp  Util.h
src/server/: CMakeLists.txt
src/server/authserver/: CMakeLists.txt  Main.cpp  authserver.conf.dist
src/server/authserver/Authentication/: AuthCodes.cpp  AuthCodes.h
src/server/authserver/Server/: AuthSocket.cpp  AuthSocket.h  RealmAcceptor.h
src/server/game/: CMakeLists.txt
src/server/scripts/: CMakeLists.txt  ScriptLoader.cpp  ScriptLoader.h
src/server/shared/: CMakeLists.txt
src/server/shared/Network/: RealmSocket.cpp  RealmSocket.h
src/server/shared/Realms/: RealmList.cpp  RealmList.h
src/server/worldserver/: CMakeLists.txt  Main.cpp  Master.cpp  Master.h  worldserver.conf.dist
src/server/worldserver/ACSoap/: ACSoap.cpp  ACSoap.h
src/server/worldserver/CommandLine/: CliRunnable.cpp  CliRunnable.h
src/server/worldserver/RemoteAccess/: RARunnable.cpp  RARunnable.h  RASocket.cpp  RASocket.h
src/server/worldserver/WorldThread/: WorldRunnable.cpp  WorldRunnable.h
src/tools/: CMakeLists.txt
src/tools/map_extractor/: CMakeLists.txt  System.cpp  adt.cpp  adt.h  dbcfile.cpp  dbcfile.h  loadlib.cpp  mpq_libmpq.cpp  mpq_libmpq04.h  wdt.cpp  wdt.h
src/tools/mesh_extractor/: CMakeLists.txt  Utils.cpp  Utils.h
src/tools/mmaps_generator/: CMakeLists.txt  IntermediateValues.cpp  IntermediateValues.h  MapBuilder.cpp  MapBuilder.h  PathCommon.h  PathGenerator.cpp  TerrainBuilder.cpp  TerrainBuilder.h  VMapExtensions.cpp
src/tools/vmap4_assembler/: CMakeLists.txt  VMapAssembler.cpp
src/tools/vmap4_extractor/: CMakeLists.txt  adtfile.cpp  adtfile.h  dbcfile.cpp  dbcfile.h  gameobject_extract.cpp  model.cpp  model.h  modelheaders.h  mpq_libmpq.cpp  mpq_libmpq04.h  vec3d.h  vmapexport.cpp  vmapexport.h  wdtfile.cpp  wdtfile.h  wmo.cpp  wmo.h
(+3655 files in other folders)
